--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ numpy==1.23.4
 Pillow==10.1.0
 pygame==2.4.0
 rich==13.6.0
-scipy==1.11.3
+scipy==1.7.2 # modified
 stable_baselines3==1.6.2
-torch==1.13.0+cu117
+torch==1.13.0 # modified
 tqdm==4.64.1
+tensorboard==2.11.0 # modified
